# Conversational-Document-Q-A-Service

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: PRD.md  main.py
data_to_ingest/: story.md  story_2.md  test.txt  test1.txt  test2.md
examples/: collector_example.py  discoverer_example.py  full_orchestrator.py  orchestrator_example.py  processor_example.py  simple_orchestrator.py  test_retrieval.py
frontend/: IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  cli_interface.py  demo.py  example_usage.md  streamlit_interface.py
indexer/: PRD.md  __init__.py
indexer/collector/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  base.py  local_file_collector.py
indexer/discoverer/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  base.py  local_file_discoverer.py
indexer/orchestrator/: __init__.py  base.py  basic.py
indexer/processor/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  base.py  document_processor.py
indexer/storer/: __init__.py  base.py  qdrant_storer.py
migrations/: 001_initial_schema.sql  PRD.md  README.md  run_migrations.py  test_db.py
setup/: PRD.md
setup/compose/: docker-compose.yml  postgres-compose.yml  qdrant-compose.yml
setup/scripts/: setup_all.py  setup_database.py  setup_postgres_17.py  setup_qdrant.py
small_integration/: integration_backend.py  integration_retrieval.py
tests/: test_collector.py  test_discoverer.py  test_orchestrator.py  test_processor.py  test_storer.py
vector_store/: PRD.md  __init__.py  base.py  qdrant_vector_store.py
