[project]
name = "conversational-document-q-a-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.96.0",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "langchain>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=0.0.21",
    "psycopg2>=2.9.12",
    "pytest>=9.0.3",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]
